--- a/about.html
+++ b/about.html
@@ -10,10 +10,12 @@
     <nav class="navbar">
         <div class="navbar-container">
             <a href="index.html" class="navbar-brand">
-                <span class="navbar-logo">🎨</span>
+                <!-- <span class="navbar-logo">🎨</span> -->
+                <img width="60" height="40" src="logo.png" alt="SketchScape" class="navbar-logo">
                 <span class="navbar-title">SketchScape</span>
             </a>
             <div class="navbar-menu">
+                <a href="index.html" class="navbar-link">Demo</a>
                 <a href="about.html" class="navbar-link active">About</a>
                 <a href="https://arxiv.org/abs/2509.06566" target="_blank" rel="noopener noreferrer" class="navbar-link arxiv-link">
                     <img src="arxiv-logo.svg" alt="arXiv" class="arxiv-logo">
@@ -180,6 +182,17 @@
                     We believe our method provides a strong, efficient baseline and a clear path forward for future research in 
                     cross-modal retrieval.
                 </p>
+
+                <h3>Citations</h3>
+                <p>
+                    If you find our work useful, please consider citing:
+                </p>
+                <pre style="background-color: #f4f4f4; padding: 15px; border-radius: 5px; overflow-x: auto;"><code>@inproceedings{demic2025back,
+    title={Back To The Drawing Board: Rethinking Scene-Level Sketch-Based Image Retrieval},
+    author={Demić, Emil and Čehovin Zajc, Luka},
+    booktitle={British Machine Vision Conference (BMVC2025)},
+    year={2025}
+}</code></pre>
 
                 <div class="back-link">
                     <a href="index.html" class="btn btn-primary">Try the Demo</a>
