--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <nav class="navbar">
         <div class="navbar-container">
             <a href="index.html" class="navbar-brand">
-                <span class="navbar-logo">🎨</span>
+                <!-- <span class="navbar-logo">🎨</span> -->
+                <img width="60" height="40" src="logo.png" alt="SketchScape" class="navbar-logo">
                 <span class="navbar-title">SketchScape</span>
             </a>
             <div class="navbar-menu">
+                <a href="index.html" class="navbar-link active">Demo</a>
                 <a href="about.html" class="navbar-link">About</a>
                 <a href="https://arxiv.org/abs/2509.06566" target="_blank" rel="noopener noreferrer" class="navbar-link arxiv-link">
                     <img src="arxiv-logo.svg" alt="arXiv" class="arxiv-logo">
