Switch to pointer events for unified drawing input
Replaces separate mouse and touch event handling with pointer events for unified support of mouse, pen, and touch input. Adds input locking to prevent mixed input types during drawing, improves pointer capture/release logic, and disables scrolling while drawing on the canvas. Also adds a disclaimer about sketch storage for research purposes.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <button id="clearBtn" class="btn btn-secondary">Clear Canvas</button>
                 <button id="submitBtn" class="btn btn-primary">Search Images</button>
             </div>
+            <p class="disclaimer-text">By using this demo, you agree that your sketches may be stored for research purposes.</p>
         </div>
 
         <div class="loading" id="loading" style="display: none;">
