Add undo functionality to drawing canvas
Introduces an undo button and drawing history to allow users to revert their last drawing action. Limits history to 20 steps for memory efficiency and resets history on canvas clear.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 <canvas id="sketchCanvas" width="512" height="512"></canvas>
             </div>
             <div class="controls">
+                <button id="undoBtn" class="btn btn-secondary">Undo</button>
                 <button id="clearBtn" class="btn btn-secondary">Clear Canvas</button>
                 <button id="submitBtn" class="btn btn-primary">Search Images</button>
             </div>
